# RoverDrive

./: .gitignore  Makefile  main.launch  mission.pr
launch/: client.launch  main.launch  server.launch  test.launch
missions/: mission.pr
scripts/: i_am_the_client.sh  set_ptu.sh
src/brink/: CMakeLists.txt  package.xml
src/brink/launch/: brink.launch  test_brink.launch
src/brink/src/: alphashape.py  brink.py
src/config/: CMakeLists.txt  package.xml
src/config/launch/: rs.launch  tf.launch
src/config/rviz_cfg/: main.rviz
src/config/udev/: 99-piksi.rules  99-xsens.rules
src/goto/: CMakeLists.txt  package.xml
src/goto/src/: goto_node.py  hdr.py  nav.py
src/imu_interpreter/: CMakeLists.txt  package.xml
src/imu_interpreter/launch/: imu_interpreter.launch
src/imu_interpreter/src/: imu_interpreter.py
src/pitranger/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/pitranger/launch/: pr.launch
src/pitranger/libs/roboteq/: CMakeLists.txt
src/pitranger/libs/roboteq/src/: Constants.h  Roboteq.h  RoboteqDevice.cpp  test_drive.cpp  test_tilt.cpp
src/pitranger/msg/: WheelVelocities.msg
src/pitranger/src/: .pitranger_node.cpp.swp  pitcam_node.cpp  pitcam_util.cpp  pitranger_node.cpp
src/pitranger/src/..,/: CMakeLists.txt
src/pitranger/src/..,/src/: RoboteqDevice.h
src/pitranger/src/..,/udev/: 99-roboteq.rules
src/pitranger/src/pr_utils/: pr_log.h  pr_math.h  pr_pitcam.cpp  pr_pitcam.h  pr_ptu.cpp  pr_ptu.h  pr_time.h  pr_wheel.cpp  pr_wheel.h
src/pitranger/srv/: PitCamCapture.srv  SetPanTilt.srv
src/realsense-ros/realsense2_camera/: CMakeLists.txt
src/realsense-ros/realsense2_camera/launch/: opensource_tracking.launch  rs_camera.launch  rs_d435_camera_with_model.launch
src/realsense-ros/realsense2_camera/launch/includes/: nodelet.launch.xml
src/realsense-ros/realsense2_description/: CMakeLists.txt
src/robot_localization/include/robot_localization/: ros_filter_utilities.h
src/robot_localization/launch/: dual_ekf_navsat.launch
src/robot_localization/params/: dual_ekf_navsat.yaml  navsat_transform_template.yaml
src/robot_localization/src/: navsat_transform.cpp
src/swiftnav_ros/: CMakeLists.txt
src/swiftnav_ros/launch/: swiftnav_ros.launch
src/swiftnav_ros/src/: swiftnav_ros_driver.cpp
src/teleop/: CMakeLists.txt  package.xml
src/teleop/src/: controller.py  teleop_node.cpp  teleop_node.py
src/teleop/src/joystick/: joystick.cc
src/whereami/: CMakeLists.txt  package.xml
src/whereami/src/: whereami_node.py
src/xsens/src/xsens_driver/: CMakeLists.txt
src/xsens/src/xsens_driver/config/: xsens.yaml
src/xsens/src/xsens_driver/launch/: xsens.launch
src/xsens/src/xsens_driver/src/: mtdevice.py
src/xsens/src/xsens_msgs/: CMakeLists.txt
src/xsens_ros_mti_driver/launch/: xsens_mti_node.launch
src/xsens_ros_mti_driver/param/: xsens_mti_node.yaml
src/xsens_ros_mti_driver/src/: xdainterface.cpp
src/xsens_ros_mti_driver/src/messagepublishers/: accelerationpublisher.h  angularvelocitypublisher.h  imupublisher.h  magneticfieldpublisher.h  orientationincrementspublisher.h  timereferencepublisher.h  transformpublisher.h  velocityincrementpublisher.h
src/yawn/: CMakeLists.txt  package.xml
src/yawn/src/: yawn_node.py
